working flex wrap and fixed padding for better visuals

--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 html {
     background-color: pink;
-    line-height: 1.5;
+    line-height: 1.15;
 }
 
-header {
+p {
+    margin: 0 5px 0 5px;
+}
+
+h1 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    font-size: 45px;
+    font-size: 40px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #F567CC;
     opacity: 0.8;
@@ -31,9 +35,10 @@ mark.green {
 .howTo {
     display: flex;
     justify-content: center;
+    text-align: center;
     flex-wrap: wrap;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 22px;
+    font-size: 20px;
     color: #E6F3F0;
     opacity: 0.8;
 }
@@ -50,6 +55,10 @@ mark.green {
     margin-bottom: 50px;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+}
 .buttons {
     padding: 0px 0px;
     margin: 30px;
@@ -60,16 +69,15 @@ mark.green {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    border-style: solid;
-    border-color: #E6F3F0;
+    border: 4px solid #E6F3F0;
+    border-radius: 5px;
+    width: 50%;
     opacity: 0.8;
-    margin-left: 100px;
-    margin-right: 100px
 }
 
 img {
-    height: 90px;
-    width: 90px;
+    height: 80px;
+    width: 80px;
 }
 
 #roundResult {
